--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,22 @@
       "type": "composer",
       "url": "https://wpackagist.org",
       "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "advanced-custom-fields/advanced-custom-fields-pro",
+        "version": "5.10.2",
+        "type": "wordpress-plugin",
+        "dist": {
+          "type": "zip",
+          "url": "https://connect.advancedcustomfields.com/v2/plugins/download?p=pro&k=b3JkZXJfaWQ9MTE1MDAwfHR5cGU9ZGV2ZWxvcGVyfGRhdGU9MjAxNy0wOS0yMSAwOToyNDowNg=="
+        }
+      }
     }
   ],
   "require": {
-    "php": "8.0",
+    "php": "^7.4",
     "composer/installers": "^2.0",
     "vlucas/phpdotenv": "^5.4",
     "oscarotero/env": "^2.1",
@@ -39,7 +51,9 @@
     "roots/bedrock-disallow-indexing": "^2.0",
     "roots/wordpress": "5.9.1",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.1.0"
+    "roots/wp-password-bcrypt": "1.1.0",
+    "advanced-custom-fields/advanced-custom-fields-pro": "^5.10",
+    "amphibee/acf-blocks": "dev-main"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.2",
